--- a/TestTool/TestTool.csproj
+++ b/TestTool/TestTool.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{74C684A1-EDFF-42EC-8D8B-0ED904D3430C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProcessControlStandarts.OPC.TestTool</RootNamespace>
-    <AssemblyName>ProcessControlStandarts.OPC.TestTool</AssemblyName>
+    <RootNamespace>ProcessControlStandards.OPC.TestTool</RootNamespace>
+    <AssemblyName>ProcessControlStandards.OPC.TestTool</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -18,7 +18,7 @@
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -54,13 +54,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands\AddDAGroupCommand.cs" />
     <Compile Include="Commands\BoundCommand.cs" />
     <Compile Include="Commands\ConnectServerCommand.cs" />
     <Compile Include="Commands\DisconnectServerCommand.cs" />
+    <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\ServerPropertiesCommand.cs" />
+    <Compile Include="DAGroupProperties.xaml.cs">
+      <DependentUpon>DAGroupProperties.xaml</DependentUpon>
+    </Compile>
     <Compile Include="IRunContext.cs" />
     <Compile Include="Commands\Command.cs" />
-    <Compile Include="Models\GroupNode.cs" />
+    <Compile Include="Models\DAGroupProperties.cs" />
+    <Compile Include="Models\DAGroupNode.cs" />
     <Compile Include="Models\LocalHostNode.cs" />
     <Compile Include="Models\Node.cs" />
     <Compile Include="Commands\RefreshServersCommand.cs" />
@@ -71,6 +77,10 @@
       <DependentUpon>ServerProperties.xaml</DependentUpon>
     </Compile>
     <Compile Include="WorkerThread.cs" />
+    <Page Include="DAGroupProperties.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
