--- a/TestTool/packages.config
+++ b/TestTool/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper.NET35" version="1.1.0.118" targetFramework="net35-Client" />
   <package id="Extended.Wpf.Toolkit" version="1.9.0" targetFramework="net35-Client" />
 </packages>
